# ihttpd

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.cargo/: config.toml
baai_flagdataset_rs/: __init__.py  baai_flagdataset_rs.pyi
baai_flagdataset_rs/cmd/: cmd_run.py
httpdrs/: Cargo.toml
httpdrs-bandwidth/: Cargo.toml  README.md
httpdrs-bandwidth/src/: lib.rs
httpdrs-core/: Cargo.toml
httpdrs-core/src/: client.rs  lib.rs  reader.rs  request.rs  runtime.rs
httpdrs-core/src/read/: mod.rs  presign.rs  reader.rs
httpdrs-core/src/write/: mod.rs
httpdrs-logger/: Cargo.toml
httpdrs-logger/src/: lib.rs
httpdrs-pbar/: Cargo.toml
httpdrs-pbar/src/: lib.rs
httpdrs-sign/: Cargo.toml
httpdrs-sign/src/: jwtsign.rs  lib.rs  reader.rs
httpdrs/src/: bandwidth.rs  download.rs  downloader.rs  lib.rs  merge.rs  meta.rs  prelude.rs  presgin.rs  presign.rs  reader.rs  runtime.rs  state.rs  stats.rs  stream.rs  watch.rs
httpdrs/src/read/: download.rs  downloader.rs  merge.rs  meta.rs  mod.rs  reader.rs  runtime.rs  state.rs  stream.rs  watch.rs
log/: app.log.2025-11-12
python/baai_flagdataset_rs/: __init__.py  _baai_flagdataset_rs.pyi
python/ihttpd/: __init__.py  _ihttpd.pyi  httpdrs.py  ihttpd.py  read.py
python/ihttpd/cmd/: cmd_run.py
src/: lib.rs  read.rs  state.rs
tests/: main.py
