[package]
name = "baai-flagdataset-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "baai_flagdataset_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.1"

# mod rs
httpdrs-core = { version = "0.1.0",  path = "httpdrs-core" }
httpdrs-logger = { version = "0.1.0",  path = "httpdrs-logger" }


[workspace]
members = [
    "httpdrs-core",
    "httpdrs-logger",
]

[workspace.dependencies]
# core dependencies
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["stream", "json"] }

# logger dependencies
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
