[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "baai-flagdataset-rs"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]

# 配置maturin包含Python文件
include = [
    "python/baai_flagdataset/**/*.py",
    "README.md",
    "LICENSE",
    "**/*.pyi",
]

# 包发现配置
[tool.setuptools.packages.find]
where = ["python"]
include = ["baai_flagdataset*"]
