[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ihttpd"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
ihttpd = "ihttpd.cmd.cmd_run:with_cmdargs"


[tool.maturin]
python-source = "python"
module-name = "ihttpd._ihttpd"
features = ["pyo3/extension-module"]

# 配置maturin包含Python文件
include = [
    "python/ihttpd/**/*.py",
    "README.md",
    "LICENSE",
    "**/*.pyi",
]

