[package]
name = "httpdrs-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "httpdrs_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }

# task dependencies
futures = { workspace = true }

# logger dependencies
tracing = { workspace = true }

# csv dependencies
csv = { workspace = true }

httpdrs-sign = { version = "0.1.0",  path = "../httpdrs-sign" }
httpdrs-pbar = { version = "0.1.0",  path = "../httpdrs-pbar" }
httpdrs-bandwidth = { version = "0.1.0",  path = "../httpdrs-bandwidth" }