[package]
name = "httpdrs-sign"
version = "0.1.0"
edition = "2024"

[lib]
name = "httpdrs_sign"
path = "src/lib.rs"

[dependencies]
# core dependencies
reqwest = { workspace = true }
tokio = { workspace = true }

# logger dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
jwt = "0.16.0"
base64 = "0.22.1"
