[package]
name = "httpdrs"
version = "0.1.0"
edition = "2024"

[lib]
name = "httpdrs"
path = "src/lib.rs"

[dependencies]

# core dependencies
tokio = { workspace = true }
futures = { workspace = true }

# server dependencies
csv = { workspace = true }


# logger dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

httpdrs-logger = { version = "0.1.0",  path = "../httpdrs-logger" }
httpdrs-core = { version = "0.1.0",  path = "../httpdrs-core" }
tokio-util = "0.7.16"
chrono = "0.4.42"
reqwest = "0.12.24"
