[package]
name = "httpdrs"
version = "0.1.0"
edition = "2024"

[lib]
name = "httpdrs"
path = "src/lib.rs"

[dependencies]

# core dependencies
tokio = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
arc-swap = "1.7.1"

# server dependencies
csv = { workspace = true }


# logger dependencies
tracing = { workspace = true }

httpdrs-logger = { version = "0.1.0",  path = "../httpdrs-logger" }
httpdrs-core = { version = "0.1.0",  path = "../httpdrs-core" }
